--- a/src/app/components/text-to-speech/text-to-speech.component.scss
+++ b/src/app/components/text-to-speech/text-to-speech.component.scss
@@ -1,3 +1,28 @@
-.img {
-    
+* {
+    margin: 0;
+}
+
+.play {
+    font-family: "Poppins", sans-serif;
+    font-size: 0.8em;
+}
+
+ion-grid {
+    width: 100%;
+    text-align: center;
+}
+
+ion-buttons {
+    width: 100%;
+}
+
+ion-button {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.sc-ion-buttons-md-h {
+    display: inline !important;
 }
