--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,6 +14,10 @@ p{
   color: var(--ion-color-dark);
 }
 
+.inicial-load {
+  font-family: "Poppins", sans-serif;
+}
+
 .spinner {
   width: 40px;
   height: 40px;
