filtro por distancia donde_dormir

--- a/src/app/pages/where-eat/where-eat.page.html
+++ b/src/app/pages/where-eat/where-eat.page.html
@@ -77,7 +77,7 @@
   </div>
 
   <ion-list class="lista">
-    <div class="empty" *ngIf="eat.length == 0 || (checkDistance !== 'OK' && checkDistance !== 'FOUND')">
+    <div class="empty" *ngIf="eat.length === 0 || (checkDistance !== 'OK' && checkDistance !== 'FOUND')">
       <i class="fi fi-rr-sad icon_empty"></i>
       <div class="text_empty">
         No hay lugares para mostrar con el filtro seleccionado
@@ -85,7 +85,7 @@
     </div>
     <ng-container *ngFor="let item of eat | filtroDondeComer:dataForm">
       <ion-item
-        *ngIf="(item.mostrar && checkDistance == 'FOUND') || (checkDistance === 'OK')"
+        *ngIf="(item.mostrar && checkDistance === 'FOUND') || (checkDistance === 'OK')"
       >
         <div class="padre">
           <div class="imagen">
