--- a/src/app/pages/where-eat/where-eat.page.scss
+++ b/src/app/pages/where-eat/where-eat.page.scss
@@ -69,7 +69,7 @@ p {
 }
 
 .info {
-  width: 75%;
+  width: 68%;
   margin-left: 5%;
   padding: 3% 2% 2% 5%;
 }
@@ -92,6 +92,12 @@ p {
 .sliderHijo,
 .imgSlider {
   width: 100%;
+}
+
+#eat-info {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 * {
