--- a/src/app/pages/where-eat/where-eat.page.html
+++ b/src/app/pages/where-eat/where-eat.page.html
@@ -92,12 +92,13 @@
             <ion-avatar item-start>
               <ion-img [src]="item.imagen.url" class="img-elem"></ion-img>
             </ion-avatar>
+            <small>{{item.distancia | formatDistancia}}</small>
           </div>
           <div class="info">
             <ion-label>
               <h2 id="eat-info">{{ item.nombre }}</h2>
               <div class="infoAbajo">
-                <h3 id="eat-info">{{ item.direccion }} ({{item.distancia | formatDistancia}})</h3>
+                <h3 id="eat-info">{{ item.direccion }}</h3>
                 <p id="eat-info" *ngFor="let tel of item.telefonos">
                   <span id="eat-info">Tel: </span>{{ tel.numero }}
                 </p>
