--- a/src/app/pages/selling-points/selling-points.page.scss
+++ b/src/app/pages/selling-points/selling-points.page.scss
@@ -30,7 +30,7 @@ h3 {
 }
 
 ion-img {
-  width: 40%;
+  width: 30%;
   height: auto;
 }
 
@@ -40,6 +40,7 @@ ion-text > p {
   font-weight: 400;
   font-size: 0.9em;
   margin-top: 3px;
+  font-family: "Poppins", sans-serif;
 }
 
 .selling-points-title {
@@ -55,6 +56,7 @@ ion-text > p {
   text-align: center;
   font-size: 1.2em;
   font-weight: bold;
+  font-family: "Poppins", sans-serif;;
 }
 
 .close {
