Pagina info: Flecha volver a menu: se corrige ruta

--- a/src/app/pages/information/information.page.html
+++ b/src/app/pages/information/information.page.html
@@ -1,7 +1,7 @@
 <ion-header>
     <ion-toolbar color="information">
         <ion-buttons slot="start">
-            <ion-back-button defaultHref="home" color="back"></ion-back-button>
+            <ion-back-button defaultHref="home-menu" color="back"></ion-back-button>
         </ion-buttons>
         <ion-img src="/assets/icon/info.png" class="iconInfo" slot="end"></ion-img>
     </ion-toolbar>
