home-menu:CasaDominga: En home-menu.ts se agrega servicio Place.service y en su constructor se llama getPlaces()

--- a/src/app/pages/home-menu/home-menu.page.html
+++ b/src/app/pages/home-menu/home-menu.page.html
@@ -85,7 +85,7 @@
       </div>
       <div class="div__menu">
         <div class="div__menu-der" routerLink="/tabs/events">¿qué hacer?</div>
-        <div class="div__menu-der" routerLink="/places/9">
+        <div class="div__menu-der" routerLink="/place-selected/XeMWupl19W6yElRqfvbK">
           Casa<br />
           Dominga
         </div>
