boton a casa dominga: Se va a cambiar. Se comenta el reproduccion audio

--- a/src/app/pages/modal-info/modal-info.page.html
+++ b/src/app/pages/modal-info/modal-info.page.html
@@ -21,7 +21,7 @@
 </ion-header>
 <ion-content>
   <!-- Botones de reproduccion Text To Speech -->
-  <app-text-to-speech [descripcion]="place.descripcion"></app-text-to-speech>
+  <!-- <app-text-to-speech [descripcion]="place.descripcion"></app-text-to-speech> -->
 
   <ion-text>
     <div class="texto" [innerHTML]="place.descripcion"></div>
