se añade wpp. ig en comer y dormir

--- a/src/app/pages/where-eat/where-eat.page.html
+++ b/src/app/pages/where-eat/where-eat.page.html
@@ -103,6 +103,8 @@
                   <span id="eat-info">Tel: </span>{{ tel.numero }}
                 </p>
               </div>
+              <ion-icon class="contact" name="logo-instagram"></ion-icon>
+              <ion-icon class="contact" name="logo-whatsapp"></ion-icon>
             </ion-label>
           </div>
         </div>
