--- a/src/app/pages/where-sleep/where-sleep.page.html
+++ b/src/app/pages/where-sleep/where-sleep.page.html
@@ -85,16 +85,19 @@
             <ion-avatar item-start>
               <ion-img [src]="item.imagen.url" class="img-elem"></ion-img>
             </ion-avatar>
+            <small>{{item.distancia | formatDistancia}}</small>
           </div>
           <div class="info">
             <ion-label>
               <h2 id="eat-info">{{ item.nombre }}</h2>
               <div class="infoAbajo">
-                <h3 id="eat-info">{{ item.direccion }} ({{item.distancia | formatDistancia}})</h3>
+                <h3 id="eat-info">{{ item.direccion }}</h3>
                 <p id="eat-info" *ngFor="let tel of item.telefonos">
                   <span id="eat-info">Tel: </span>{{ tel.numero }}
                 </p>
               </div>
+              <ion-icon class="contact" name="logo-instagram"></ion-icon>
+              <ion-icon class="contact" name="logo-whatsapp"></ion-icon>
             </ion-label>
           </div>
         </div>
