--- a/src/app/pages/where-sleep/where-sleep.page.scss
+++ b/src/app/pages/where-sleep/where-sleep.page.scss
@@ -5,7 +5,7 @@
 
 ion-avatar, ion-avatar>img {
     border-radius: 15% !important;
-    height: 95%;
+    height: auto;
     width: 100%;
 }
 
@@ -29,6 +29,11 @@ ion-title {
     color: #fff;
     font-weight: 300;
     font-family: "Poppins", sans-serif;
+}
+
+small {
+  margin-top: 5px;
+  font-family: "Poppins", sans-serif;
 }
 
 h2 {
@@ -60,13 +65,21 @@ span, p {
 }
 
 .imagen {
-    width: 25%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 25%;
 }
 
 .info {
     width: 68%;
     margin-left: 5%;
     padding: 3% 2% 2% 5%;
+}
+
+.contact {
+  padding: 3px 6px 0 0;
 }
 
 #eat-info {
