Ajustes de fuente dislexica

--- a/src/app/pages/event-detail/event-detail.page.html
+++ b/src/app/pages/event-detail/event-detail.page.html
@@ -18,55 +18,55 @@
       <div class="cuenta-regresiva">
           <div class="time">
               <ul class="time-list">
-                  <li class="count-bg-one radius"><span id="days">{{day}}</span>Dias</li>
-                  <li class="count-bg-two radius"><span id="hours">{{hours}}</span>Horas</li>
-                  <li class="count-bg-three radius"><span id="minutes">{{minutes}}</span>Minutos</li>
-                  <li class="count-bg-four radius"><span id="seconds">{{seconds}}</span>Segundos</li>
+                  <li id="event-detail-container" class="count-bg-one radius"><span id="days">{{day}}</span>Dias</li>
+                  <li id="event-detail-container" class="count-bg-two radius"><span id="hours">{{hours}}</span>Horas</li>
+                  <li id="event-detail-container" class="count-bg-three radius"><span id="minutes">{{minutes}}</span>Minutos</li>
+                  <li id="event-detail-container" class="count-bg-four radius"><span id="seconds">{{seconds}}</span>Segundos</li>
               </ul>
           </div>
       </div>
   </section>
     <div class="ubicacion">
-      <div class="dir">
-        <div class="div-ubicacion" (click)="openMap()">{{ lugar }}</div>
+      <div id="event-detail-container" class="dir">
+        <div id="event-detail-container" class="div-ubicacion" (click)="openMap()">{{ lugar }}</div>
         <i class="fas fa-map-marker-alt mark-info"></i>529, 18 de Julio, San
         José de Mayo
       </div>
     </div>
     <div class="fecha-hora">
       <div class="fecha">
-        <div class="div-fecha">Fecha</div>
+        <div id="event-detail-container"  class="div-fecha">Fecha</div>
         <div class="fecha-hora_div">
-          <i class="fas fa-calendar-alt mark-info"></i>{{fecha | date: 'dd.MM.yyyy'}}
+          <i id="event-detail-container" class="fas fa-calendar-alt mark-info"></i>{{fecha | date: 'dd.MM.yyyy'}}
         </div>
       </div>
-      <div class="hora">
-        <div class="div-hora">Hora</div>
-        <div class="fecha-hora_div">
-          <i class="fas fa-clock mark-info"></i>{{fecha | date:'HH:mm'}}
+      <div  class="hora">
+        <div id="event-detail-container" class="div-hora">Hora</div>
+        <div  class="fecha-hora_div">
+          <i id="event-detail-container" class="fas fa-clock mark-info"></i>{{fecha | date:'HH:mm'}}
         </div>
       </div>
     </div>
     <div class="descripcion" id="description-event" [innerHTML]="descripcion">
-      {{descripcion}}&nbsp;<a *ngIf="descripcion.length > 250">Ver más</a>
+      {{descripcion}}&nbsp;<a id="event-detail-container" *ngIf="descripcion.length > 250">Ver más</a>
     </div>
   </div>
   <div class="ticket">
     <div *ngIf="precioUnico && precio > 0" class="entradas">
-      <div class="entradas_div">Valor ticket</div>
-      <div class="precios_div">{{ moneda }}&nbsp;{{ precio }}</div>
+      <div id="event-detail-container" class="entradas_div">Valor ticket</div>
+      <div id="event-detail-container" class="precios_div">{{ moneda }}&nbsp;{{ precio }}</div>
     </div>
     <div *ngIf="precioUnico === false && precio > 0" class="entradas">
-      <div class="entradas_div">Desde</div>
-      <div class="precios_div">{{ moneda }}&nbsp;{{ precio }}</div>
+      <div id="event-detail-container" class="entradas_div">Desde</div>
+      <div id="event-detail-container" class="precios_div">{{ moneda }}&nbsp;{{ precio }}</div>
     </div>
     <div *ngIf="precio === 0" class="entradas">
-      <div class="entradas_div">Entrada</div>
-      <div class="precios_div">Gratis</div>
+      <div id="event-detail-container" class="entradas_div">Entrada</div>
+      <div id="event-detail-container" class="precios_div">Gratis</div>
     </div>
-    <div class="precio" (click)="openModalSellingPoint(instagram, tickantel, facebook, whatsapp)">
+    <div class="precio" (click)="openModalSellingPoint(instagram, tickAntel, facebook, whatsapp)">
       <div><i class="fas fa-ticket-alt mark-info"></i></div>
-      <div class="puntos-venta">Ver puntos de venta</div>
+      <div id="event-detail-container" class="puntos-venta">Ver puntos de venta</div>
     </div>
   </div>
 </ion-content>
