--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -407,6 +407,10 @@ body.dyslexic {
   #eat-info,
   #sleep-info,
   #party-info,
+  #info-art,
+  #home-menu,
+  #filters,
+  .texto,
   .inicial-load,
   #place-container,
   #place-description,
