--- a/src/app/pages/home-menu/home-menu.page.html
+++ b/src/app/pages/home-menu/home-menu.page.html
@@ -1,9 +1,9 @@
 <ion-content>
   <div class="container">
     <div class="slider_filter">
-      <div class="slider_filter-title">
-        <h1>Hola, soy domin<span>go!</span></h1>
-        <p>
+      <div  class="slider_filter-title" >
+        <h1 id="home-menu" >Hola, soy domin<span>go!</span></h1>
+        <p id="home-menu" >
           y a partir de ahora seré tu guía. <br />
           ¿Descubrimos juntos un nuevo sitio?
         </p>
@@ -60,8 +60,8 @@
             *ngFor="let dis of optionDsitance"
             (click)="select(null, dis)"
           >
-            <ion-text *ngIf="distanceSelected !== dis">{{ dis }} km</ion-text>
-            <ion-text class="depto_bold" *ngIf="distanceSelected === dis"
+            <ion-text id="home-menu" *ngIf="distanceSelected !== dis">{{ dis }} km</ion-text>
+            <ion-text id="home-menu" class="depto_bold" *ngIf="distanceSelected === dis"
               >{{ dis }} km</ion-text
             >
             <ion-radio mode="ios" slot="end" value="{{ dis }}"></ion-radio>
@@ -73,21 +73,20 @@
 
     <div class="menu" *ngIf="deptoSelected != null || distanceSelected != null">
       <div class="div__menu">
-        <div class="div__menu-izq" routerLink="/tabs/place">¿dónde ir?</div>
-        <div class="div__menu-izq" routerLink="/tabs/eat">
+        <div id="home-menu" class="div__menu-izq" routerLink="/tabs/place">¿dónde ir?</div>
+        <div id="home-menu" class="div__menu-izq" routerLink="/tabs/eat">
           ¿dónde<br />
           comer?
         </div>
-        <div class="div__menu-izq" routerLink="/tabs/sleep">
+        <div id="home-menu" class="div__menu-izq" routerLink="/tabs/sleep">
           ¿dónde<br />
           dormir?
         </div>
       </div>
-      <div class="div__menu">
-        <div class="div__menu-der" routerLink="/tabs/events">¿qué hacer?</div>
-        <div class="div__menu-der" routerLink="/place-selected/XeMWupl19W6yElRqfvbK">
-          Casa<br />
-          Dominga
+      <div id="home-menu" class="div__menu">
+        <div id="home-menu" class="div__menu-der" routerLink="/tabs/events">¿qué hacer?</div>
+        <div id="home-menu" class="div__menu-der" routerLink="/tabs/artist">
+          Artistas
         </div>
       </div>
     </div>
