--- a/src/app/pages/where-eat/where-eat.page.scss
+++ b/src/app/pages/where-eat/where-eat.page.scss
@@ -72,6 +72,10 @@ p {
   width: 25%;
 }
 
+#filters {
+  color: var(--ion-color-dark);
+}
+
 small {
   margin-top: 5px;
   font-family: "Poppins", sans-serif;
@@ -150,7 +154,7 @@ small {
   position: relative;
   z-index: 50;
   width: 90%;
-  background-color: rgb(240, 240, 240);
+  background-color: var(--ion-color-light);
   padding: 16px;
   border-radius: 60px;
 }
@@ -167,7 +171,7 @@ ion-label {
   flex-direction: column;
   margin: 0 5% 5px 5%;
   z-index: 100;
-  background-color: #fff;
+  background-color: var(--ion-color-back);
   border-radius: 16px;
   -webkit-box-shadow: 0px 0px 9px -1px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px 0px 9px -1px rgba(0, 0, 0, 0.75);
